<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.AlertActivity">
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_header_back"
        android:gravity="center_vertical"
        android:padding="@dimen/view_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/imageButtonExit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:padding="@dimen/view_margin"
            app:srcCompat="@drawable/ic_back" />

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/view_margin"
            android:text="@string/alert"
            android:textColor="?colorPrimaryVariant"
            android:textSize="@dimen/label_size" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageViewDanger"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:translationZ="5dp"
        android:src="@drawable/ic_alert_medium"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintTop_toTopOf="@+id/cardView" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginLeft="@dimen/view_margin"
        android:layout_marginRight="@dimen/view_margin"
        android:layout_marginBottom="@dimen/view_margin"
        app:cardCornerRadius="@dimen/view_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.049">

        <ImageView
            android:id="@+id/imageViewPhoto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_image_not_found" />
    </androidx.cardview.widget.CardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/view_margin"
        android:layout_marginTop="@dimen/view_margin"
        android:layout_marginEnd="@dimen/view_margin"
        app:layout_constraintBottom_toTopOf="@+id/buttonNotify"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textSize="@dimen/label_size" />

            <TextView
                android:id="@+id/textViewLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_field_back"
                android:padding="@dimen/view_margin"
                android:text="Patra, Greece"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/view_margin" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_s_name"
                android:textSize="@dimen/label_size" />

            <TextView
                android:id="@+id/textViewName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_field_back"
                android:padding="@dimen/view_margin"
                android:text="User's Name"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/view_margin" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/disaster"
                android:textSize="@dimen/label_size" />

            <TextView
                android:id="@+id/textViewDisaster"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_field_back"
                android:padding="@dimen/view_margin"
                android:text="Flood"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/view_margin" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comments"
                android:textSize="@dimen/label_size" />

            <TextView
                android:id="@+id/textViewComments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_field_back"
                android:padding="@dimen/view_margin"
                android:text="Flood"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/textViewHelpTitle"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help"
                android:textSize="@dimen/label_size" />
            <TextView
                android:id="@+id/textViewHelp"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_field_back"
                android:padding="@dimen/view_margin"
                android:text="Flood"
                android:textSize="16sp" />
            <View
                android:layout_width="wrap_content"
                android:layout_height="@dimen/view_margin"/>
        </LinearLayout>
    </ScrollView>
    <Button
        android:id="@+id/buttonNotify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notify"
        android:visibility="gone"
        android:layout_marginLeft="@dimen/view_margin"
        android:layout_marginRight="@dimen/view_margin"
        android:layout_marginBottom="@dimen/view_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>